Melhorar autenticação do serviço Microblog
